# modesolver

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
examples/: all_fields.ipynb  basic_fullvector.ipynb  basic_semivector.ipynb  directional_coupler.ipynb  faraday_waveguide.ipynb  fiber_tm_mode.ipynb  geometrical_mesh_construction.ipynb  mesh_construction.ipynb  nonuniform_mesh_fullvector.ipynb  pml_fullvector_leaky_mode.ipynb  unfold_demo.ipynb  uniaxial_channel.ipynb  uniaxial_channel_rotated.ipynb  waveguide_junction.ipynb  yee_mesh.ipynb
modesolver/: __init__.py  sparse_solve.py  svmodes.py  wgmodes.py  wgmodes_yee.py
modesolver/geometry/: __init__.py  fibermesh.py  layout.py  layoutmesh.py  pml.py  waveguidemesh.py  waveguidemeshfull.py
modesolver/postprocess/: __init__.py  collocate.py  efields.py  export.py  group_index.py  poynting.py  scattering.py  unfold.py
symbolic/: finitedifference.ipynb
